--- a/finite.tex
+++ b/finite.tex
@@ -219,7 +219,7 @@ E_2^{*, *} & = \Cotor_{E_0 E}^{*, *}(E_0, E_0 X) \\
 where \(\omega^{n/2}\) denotes the line bundle \(\omega^{n/2} = \context{E}(\S^n)\).
 \end{lemma}
 \begin{proof}[Proof sketch]
-The homological algebra of Hopf algebras from \Cref{HopfAlgebraLecture} can be lifted almost verbatim, allowing us to define resolutions suitable for computing derived functors~\cite[Definition A1.2.3]{RavenelGreenBook}.  This includes the cobar resolution~\cite[Definition A1.2.11]{RavenelGreenBook}, which shows that the associated graded for the coskeletal filtration of \(\mathcal D_E(X)\) is a complex computing the derived functors claimed in the Lemma statement.  The name given to \(\omega^{n/2}\) is justified by \Cref{Pi2AndInvariantDiffls}.
+The homological algebra of Hopf algebras from \Cref{HopfAlgebraLecture} can be lifted almost verbatim, allowing us to define resolutions suitable for computing derived functors~\cite[Definition A1.2.3]{RavenelGreenBook}.  This includes the cobar resolution~\cite[Definition A1.2.11]{RavenelGreenBook}, which shows that the associated graded for the coskeletal filtration of \(\mathcal D_E(X)\) is a complex computing the derived functors claimed in the Lemma statement.  The name \(\omega^{n/2}\) given to \(\context{E}(S^n)\) is justified by \Cref{Pi2AndInvariantDiffls}.
 \end{proof}
 
 \begin{remark}[{cf.\ \Cref{HurewiczImageOnZeroLine}}]\label{HurewiczRemark}
