--- a/characters.tex
+++ b/characters.tex
@@ -960,7 +960,7 @@ In particular, when \(X = *\), we find that
 That is, the rationalization of the \(E\)-cohomology of \(BG\) is a subring of generalized class functions.
 
 \begin{example}[{\cite[Section 1.3]{HKR}}]
-Specialized to the context of \Cref{KUCharacterExample}, the character map gives a ring homomorphism
+In the context of \Cref{KUCharacterExample}, the character map gives the usual ring homomorphism to class functions
 \begin{align*}
 \chi_G\co R(G) & \to \mathrm{Cl}(G_p, C_0)^{\widehat{\Z}}, \\
 \intertext{where \(R(G)\) is the representation ring of \(G\), \(C_0 = \Q(\zeta_j : j \ge 0)\) is the maximal abelian extension of \(\Q\), and \(\widehat{\Z}\) is both the Galois group of the extension and \(\Aut(\Lambda)\).  After tensoring up, this yields two isomorphisms}
