fix square/diagram text discrepancy

--- a/mo.tex
+++ b/mo.tex
@@ -84,7 +84,7 @@ The spectrum \index{bordism!unoriented, \(MO\)}\(MO\) arises as the universal ex
 \[MO := T(J_{\R}) = \colim_n T(J_{\R}^n) = \colim_n \Susp^{-n} T_n J_{\R}^n.\]
 \end{definition}
 
-The spectrum \(MO\) has several remarkable properties.  First, it can be shown that the generalized homology theory that this spectrum encodes matches the one described in the Introduction~(\cite[Theorem 12.30]{Switzer}, \cite[Theorem 7.27]{Rudyak}).  The most basic homotopical property is that this spectrum is naturally a ring spectrum, and this follows immediately from \(J_{\R}\) being a homomorphism of \(H\)--spaces.  Much more excitingly, we can also deduce the presence of \index{Thom isomorphism}Thom isomorphisms just from the properties stated thus far.  That \(J_{\R}\) is a homomorphism means that the following square commutes:
+The spectrum \(MO\) has several remarkable properties.  First, it can be shown that the generalized homology theory that this spectrum encodes matches the one described in the Introduction~(\cite[Theorem 12.30]{Switzer}, \cite[Theorem 7.27]{Rudyak}).  The most basic homotopical property is that this spectrum is naturally a ring spectrum, and this follows immediately from \(J_{\R}\) being a homomorphism of \(H\)--spaces.  Much more excitingly, we can also deduce the presence of \index{Thom isomorphism}Thom isomorphisms just from the properties stated thus far.  That \(J_{\R}\) is a homomorphism means that the square in the following diagram commutes:
 \begin{center}
 \begin{tikzcd}
 BO \times BO \rar["\sigma",equiv'] \arrow[bend right]{rrd} & BO \times BO \arrow{r}{\mu} \arrow{d}{J_{\R} \times J_{\R}} & BO \arrow{d}{J_{\R}} \\
