repair missing double-dual

--- a/quillen.tex
+++ b/quillen.tex
@@ -60,7 +60,7 @@ Take \(S = \Spec R\) to be our base scheme, let \(X = \Spec A\) be an affine sch
 \end{definition}
 
 \begin{remark}
-In the situation above, there is a naturally occurring map \[T_s X \to \CatOf{Modules}_R(T^*_s X, R).\]  Namely, a map \(\sheaf O_X \to R[\eps] / \eps^2\) induces a map \(I \to (\eps)\), and hence induces a further map \[I / I^2 \to (\eps) / (\eps^2) \cong R,\] which can be interpreted as a point in \(T^*_s X\).
+In the situation above, there is a naturally occurring map \[T_s X \to \CatOf{Modules}_R(T^*_s X, R).\]  Namely, a map \(\sheaf O_X \to R[\eps] / \eps^2\) induces a map \(I \to (\eps)\), and hence induces a further map \[I / I^2 \to (\eps) / (\eps^2) \cong R,\] which can be interpreted as a point in \((T^*_s X)^*\).
 \end{remark}
 
 Harkening back to \Cref{FirstAppearanceOfInternalAut}, the definition of the \(R\)--module tangent space begs promotion to an \(S\)--scheme.
