"FGL" might mean a tuple

--- a/quillen.tex
+++ b/quillen.tex
@@ -201,7 +201,7 @@ and hence a \(n\)--tuple of \((2n)\)--variate power series ``\(+_\phi\)'', satis
 \underline{\smash x} +_\phi \underline{\smash 0} & = \underline{\smash x}, \tag{unitality} \\
 \underline{\smash x} +_\phi (\underline{\smash y} +_\phi \underline{\smash z}) & = (\underline{\smash x} +_\phi \underline{\smash y}) +_\phi \underline{\smash z}. \tag{associativity}
 \end{align*}
-Such a series \(+_\phi\) is called a \index{formal group!law}\textit{formal group law}, and it is the concrete data associated to a formal group.
+Such a (tuple of) series \(+_\phi\) is called a \index{formal group!law}\textit{formal group law}, and it is the concrete data associated to a formal group.
 \end{definition}
 
 Let us now consider two examples of complex-orientable ring spectra \(E\) and describe these invariants for them.
