--- a/quillen.tex
+++ b/quillen.tex
@@ -748,7 +748,7 @@ The Tate spectrum is quite destructive in the case of \(G = C_p\).\footnote{In f
 X \arrow[equal]{u} \arrow{r} & X \arrow[equal]{u} \arrow["\Delta"]{r} & X^{\vee C_p} \arrow[equal]{u} \arrow["\mu"]{r} & X \arrow[equal]{u},
 \end{tikzcd}
 \end{center}
-where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the norm map is an equivalence.  This diagram is natural in \(X\) and each node preserves cofiber sequences, so for finite \(X\) it suffices to check the claim the spheres \(\S^n\).  Because we are norming up from the trivial group, the long horizontal composite is multiplication by \(|C_p| = p\).  We have thus factored \(p \in \pi_0 \End \S^n = \Z\) as some map followed by the diagonal and fold maps, which themselves compose to \(p\).  This forces the norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes \((X^{\vee C_p})^{tC_p}\) to be contractible.
+where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the norm map is an equivalence.  This diagram is natural in \(X\) and each node preserves cofiber sequences, so for finite \(X\) it suffices to check the claim on the spheres \(\S^n\).  Because we are norming up from the trivial group, the long horizontal composite is multiplication by \(|C_p| = p\).  We have thus factored \(p \in \pi_0 \End \S^n = \Z\) as some map followed by the diagonal and fold maps, which themselves compose to \(p\).  This forces the norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes \((X^{\vee C_p})^{tC_p}\) to be contractible.
 \end{example}
 
 As another example of the destructiveness of the Tate operation, we have the following:
