don't use "facts" twice in 2.4.15

--- a/quillen.tex
+++ b/quillen.tex
@@ -796,7 +796,7 @@ The effect of this Lemma is twofold.  For one, the Tate operation is not only ad
 There is an isomorphism \[\pi_* MU^{tC_n} = MU^* BC_n[x^{-1}],\] where \(x\) is the restriction to \(MU^2 BC_n\) of the canonical class \(x \in MU^2(\CP^\infty)\).\footnote{Everything we say here will actually be valid for any number \(n\), not just a prime, as well as any ring spectrum \(E\) under \(MU\).}
 \end{theorem}
 \begin{proof}
-Consider the \(C_n\)--equivariant cofiber sequence \[S(\C^m)_+ \to S^0 \to S^{\C^m},\] where \(S(\C^m)\) is the unit sphere inside of \(\C^m\) and \(S^{\C^m}\) is the one-point compactification of the \(C_n\)--representation \(\C^m\).  A key fact is that \(S(\C^m)\) admits a \(C_n\)--equivariant cell decomposition by free cells, natural with respect to the inclusions as \(m\) increases.  This buys us several facts:
+Consider the \(C_n\)--equivariant cofiber sequence \[S(\C^m)_+ \to S^0 \to S^{\C^m},\] where \(S(\C^m)\) is the unit sphere inside of \(\C^m\) and \(S^{\C^m}\) is the one-point compactification of the \(C_n\)--representation \(\C^m\).  A key fact is that \(S(\C^m)\) admits a \(C_n\)--equivariant cell decomposition by free cells, natural with respect to the inclusions as \(m\) increases.  This buys us several consequences:
 \begin{enumerate}
     \item The following Tate objects vanish: \((MU \sm S(\C^m)_+)^{tC_n} \simeq *\).  As in \Cref{TateDestruction}, this is because the Tate construction vanishes on free \(C_n\)--cells.
     \item We can use \(\colim_{m \to \infty} S(\C^m)_+\) as a model for \(EC_n\), so that \[MU_{hC_n} = \left( \colim_{m \to \infty} MU \sm S(\C^m)_+ \right)_{hC_n}.\]
