remove stray 'on'

--- a/quillen.tex
+++ b/quillen.tex
@@ -934,7 +934,7 @@ P^{C_n}(u_m) & = \phi(P^{C_n}(c_m(\xi_m))). \\
 \end{align*}
 \end{proof}
 
-We will use this to power the following conclusion about cohomology classes on in general, starting with an observation about the fundamental class of a sphere:
+We will use this to power the following conclusion about cohomology classes in general, starting with an observation about the fundamental class of a sphere:
 
 \begin{lemma}[{cf.\ \cite[Corollary VII.7.14]{Rudyak}}]\label{PowerOpnsOnSuspensions}
 For \(f \in MU^{2q}(X)\) a cohomology class in a finite complex \(X\), there is the \index{homology suspension}suspension relation \[P^{C_n}(\sigma^{2m} f) = w^m \sigma^{2m} P^{C_n}(f).\]
