change 'stalk' to 'fiber' in intro to Ch 3

--- a/finite.tex
+++ b/finite.tex
@@ -21,7 +21,7 @@ Given such a diagram where the diagonal arrow is flat, the functor \[R_0(X) := \
 
 In the course of proving this theorem, Landweber additionally devised a method to recognize flat maps.  Recall that a map \(f\co Y \to X\) of schemes is flat exactly when for any closed subscheme \(i\co A \to X\) with ideal sheaf \(\mathcal I\) there is an exact sequence \[0 \to f^* \sheaf I \to f^* \sheaf O_X \to f^* i_* \sheaf O_A \to 0.\]  Landweber classified the closed subobjects of \(\moduli{fg}\), thereby giving a precise list of conditions needed to check maps for flatness.
 
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing geometric fibers: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points \(\Gamma\) on \(\moduli{fg}\).  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava \(E_\Gamma\)--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava \(K_\Gamma\)--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: \(K_\Gamma(X)\) may not actually compute the literal stalk of \(\context{\MUP}(X)\) at \(\Gamma\), since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of the module \(\context{\MUP}(X)\).} of computing the stalk of \(\context{\MUP}(X)\) at \(\Gamma\).\footnote{Incidentally, this program has no content when applied to \(\context{\HFtwo}\), as \(\Spec \F_2\) is simply too small.}
+This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing geometric fibers: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points \(\Gamma\) on \(\moduli{fg}\).  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava \(E_\Gamma\)--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava \(K_\Gamma\)--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: \(K_\Gamma(X)\) may not actually compute the literal fiber of \(\context{\MUP}(X)\) at \(\Gamma\), since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of the module \(\context{\MUP}(X)\).} of computing the fiber of \(\context{\MUP}(X)\) at \(\Gamma\).\footnote{Incidentally, this program has no content when applied to \(\context{\HFtwo}\), as \(\Spec \F_2\) is simply too small.}
 
 We have thus assembled a task list:
 \begin{itemize}
