fix duplicated C in 3.6.1

--- a/finite.tex
+++ b/finite.tex
@@ -1169,7 +1169,7 @@ In this Lecture, we will couple the ideas of \Cref{StableContextLecture} to the 
 For a ring \(R\), the full derived category \(D(\Spec R)\) and the derived category of perfect complexes \(D^{\perf}(\Spec R)\) form examples of triangulated categories analogous to \(\CatOf{Spectra}\) and \(\CatOf{Spectra}^{\fin}\).  By interpreting an \(R\)--module as a quasicoherent sheaf over \(\Spec R\), we can use them to probe for structure of \(\Spec R\)---for instance, we can test whether \(\widetilde M\) is supported over some closed subscheme \(\Spec R/I\) by restricting the sheaf, which amounts algebraically to asking whether \(M\) is annihilated by \(I\).  In the reverse, we can also try to discern what ``closed subscheme'' should mean in some arbitrary triangulated category by codifying the properties of the subcategory of \(D(\Spec R)\) supported away from \(\Spec R\).  The key observation is this subcategory is closed under tensoring modules: if \(M\) is annihilated by \(I\), then \(M \otimes_R N\) is also annihilated by \(I\).
 
 \begin{definition}[{\cite[Definition 1.3]{Balmer}}]
-Let \(\CatOf C\) be a triangulated \(\otimes\)--category \(\CatOf C\).  A thick subcategory \(\CatOf C' \subseteq \CatOf C\) is\ldots
+Let \(\CatOf C\) be a triangulated \(\otimes\)--category.  A thick subcategory \(\CatOf C' \subseteq \CatOf C\) is\ldots
 \begin{itemize}
 \item \ldots a \index{thick subcategory!tensor ideal@\(\otimes\)--ideal}\textit{\(\otimes\)--ideal} when \(x \in \CatOf C'\) forces \(x \otimes y \in \CatOf C'\) for any \(y \in \CatOf C\).
 \item \ldots a \textit{prime \(\otimes\)--ideal} when \(x \otimes y \in \CatOf C'\) also forces at least one of \(x \in \CatOf C'\) or \(y \in \CatOf C'\).
