uniformize subsection formatting

--- a/powerops.tex
+++ b/powerops.tex
@@ -865,7 +865,7 @@ So, we seek a pair of \(E_\infty\)--ring maps into the rationalization and the \
 
 
 
-\subsubsection{Rational orientations}
+\subsection{Rational orientations}
 
 We begin with the two rational nodes in the pullback diagram.  As a first approximation to our goal, consider the problem of giving a complex orientation \(MU \to \Q \otimes R\) of a rational ring spectrum \(\Q \otimes R\).  There is an automatic such orientation granted by
 \begin{center}
@@ -903,7 +903,7 @@ This accounts for both of the mapping sets \[\EinftyRings(M\Spin, \Q \otimes KO)
 
 
 
-\subsubsection{Finite place orientations}\label{FinitePlaceOrientationsSubsection}
+\subsection{Finite place orientations}\label{FinitePlaceOrientationsSubsection}
 
 We want to understand \(\EinftyRings(M\Spin, KO_p)\) and the map \[\EinftyRings(M\Spin, KO_p) \to \EinftyRings(M\Spin, \Q \otimes KO_p).\]  Here is the initial set-up:
 \begin{center}
@@ -1062,7 +1062,7 @@ We have thus identified the legal fillers \(C\) as those sequences of rational n
 \end{enumerate}
 
 
-\subsubsection{Stable \(KO\) operations}
+\subsection{Stable \(KO\) operations}
 \newcommand{\cts}{\mathrm{cts}}
 
 We have identified three points where we want to understand the collection of stable \(KO_p\) operations (which we will abbreviate to \(KO\), since in this subsection we are concerned only with the \(p\)--adic case).  Although much of the main text of this book has been concerned with this sort of subject, this does not appear to be so immediately accessible: we want operations rather than cooperations, and \(KO\) is \emph{not} a complex-orientable ring spectrum.  It is close to one, though, and we gain access to it through familiar approximation.
@@ -1102,7 +1102,7 @@ so that \(\pi_0 KU \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)\).  Taking f
 where the isomorphism is given by sending an operation $f\co KO \to KO$ to the K\"ummer sequence $(f(v^k)/v^k)_k \in \pi_0 KO = \Z_p$.  We additionally see that \([KO, KO]\) torsion-free, which accounts for all of our outstanding claims.
 
 
-\subsubsection{Mazur's construction of Kubota--Leopoldt \(p\)--adic \(L\)--functions}
+\subsection{Mazur's construction of Kubota--Leopoldt \(p\)--adic \(L\)--functions}
 
 Having learned enough about \(KO\)--operations to justify the program enacted in the previous subsections, we now need to show that there exist sequences of \(p\)--adic integers satisfying those criteria.
 
@@ -1135,7 +1135,7 @@ Hence, the Mellin transform of the measure \(dE_{1,c}\) on \(\Z_p^\times\) gives
 It also has \emph{exactly} the properties we need to guarantee the existence of an \(E_\infty\)--orientation \(M\Spin \to KO\).  It is remarkable that the three factors in \[\int_{\Z_p^\times} x^{k-1} \mathrm d E_{1, c} = \frac{B_k}{k} (1 - c^k)(1 - p^{k-1})\] have discernable provenances in the two fields.  In stable homotopy theory these arise respectively in the characteristic series of the orientation \(MU \to KU\), in the finite Adams resolution for the \(K(1)\)--local sphere, and in the Rezk logarithm.  In \(p\)--adic analytic number theory, they arise as the special values of the \(\zeta\)--function, the regularization to make it a measure, and the restriction to perform \(p\)--adic interpolation.  It is completely mysterious how or if these operations correspond.\footnote{Walker's PhD thesis gives a kind of generalization of this correspondence: for a height \(1\) formal group \(\Gamma\) over a field of characteristic \(p > 2\), he associates to an \(H_\infty\)--orientation \(MU \to E_\Gamma\) a sequence of generalized Bernoulli numbers and demonstrates that they appear as the moments of a \(p\)--adic measure on \(\Z_p^\times\)~\cite{Walker}.}
 
 
-\subsubsection{Footnotes on the \(\tmf\) case}
+\subsection{Footnotes on the \(\tmf\) case}
 
 The case of \(M\String \to \tmf\) has all of the same trappings, but while many of the steps remain the same, many details become much more intricate:
 \begin{enumerate}
