pointer to hill-hopkins

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -476,7 +476,7 @@ From the perspective of \(i\), the Hopf ring-ring \(R[\sheaf O_{\mathbb A^1}]\) 
 Finally, we turn to \(Q^* \AA(F, E)\) directly, with the goal of explaining the phenomenon uncovered in \Cref{UnstableContextsSection}, where we passed to the \(\ast\)--indecomposables to find the classical ring of functions on the endomorphism scheme of \(\G_a\).
 
 \begin{corollary}
-For complex-orientable \(F\) and \(E\), we have\index{formal group!homomorphism} \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
+For complex-orientable \(F\) and \(E\), we have\index{formal group!homomorphism}\footnote{Hill and Hopkins have described the behavior of \(\SpH \AA(H\Z, \MU)\) on (graded) Hopf rings not in the image of \(i\)~\cite[Definition 1.22]{HillHopkins}.} \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
 \end{corollary}
 \begin{proof}
 This is a matter of calculating \(Q^* \AA(F, E)\), which is possible to do coordinate-freely (using \Cref{HopfRingComparisonMap} and \cite[Proposition 6.15]{StricklandFSFG}), but it is at least as clear to just give in and pick coordinates.  Making such a choice and using \Cref{ArithmeticInQAst}, we abbreviate \(\langle \beta_0[a_{ij}^E] \rangle\) to \(\<a_{ij}^E\>\) and \(\beta_j[1]\) to \(\beta_j\) to form \[\bigast_{i, j} \left(\left\<a_{ij}^E\right\> \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \tag{in \(Q^*\)},\] from which it follows that \[Q^* \AA(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
