--- a/main.bib
+++ b/main.bib
@@ -1565,6 +1565,19 @@ MRREVIEWER = {Jacques Tilouine},
        URL = {http://dx.doi.org/10.1007/978-1-4684-9390-0},
 }
 
+@ARTICLE{HillHopkins,
+   author = {{Hill}, M.~A. and {Hopkins}, M.~J.},
+    title = "{Real Wilson Spaces I}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1806.11033},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, 55N91},
+     year = 2018,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180611033H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{HHR,
   title={On the nonexistence of elements of {K}ervaire invariant one},
