add missing QED block to 4.5.20

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1085,7 +1085,7 @@ We learn immediately that the \(H_* B(n)\) spectrum, which we already knew to be
 Lastly, for a \emph{space} \(X\), we definitionally have that have \(H_* X\) forms an unstable module over the Steenrod algebra, i.e., \(\Loops^\infty H_* X = H_* X\).  This has the following direct sequence (with minor fuss at the bad indices \(n \equiv \pm 1 \pmod p\)):
 
 \begin{lemma}[{\cite[Lemma 3.3]{GLM}}]
-For \(X\) a space, there is a natural surjection \(B(n)_n X \to H_n X\).
+For \(X\) a space, there is a natural surjection \(B(n)_n X \to H_n X\). \qed
 \end{lemma}
 
 \begin{remark}[{\cite{Cohen}}]
