psi/phi mixup in 3.1

--- a/finite.tex
+++ b/finite.tex
@@ -86,7 +86,7 @@ S \otimes_R N \arrow["1 \otimes \psi"]{r} \arrow["\phi" near end]{rrd} \arrow{d}
 N \arrow["\psi"]{r} & N \otimes_S (S \otimes_R S) \arrow[equal]{r} & N \otimes_R S,
 \end{tikzcd}
 \end{center}
-and the long composite gives the descent datum \(\phi\).  Conversely, given a descent datum \(\phi\) we can restrict it to get a coaction map by \[\psi\co N = R \otimes_R N \xrightarrow{f \otimes 1} S \otimes_R N \xrightarrow{\psi} N \otimes_R S.\]  The coassociativity condition on the comodule is equivalent under this correspondence to the commutativity of the triangle associated to \(\phi\).
+and the long composite gives the descent datum \(\phi\).  Conversely, given a descent datum \(\phi\) we can restrict it to get a coaction map by \[\psi\co N = R \otimes_R N \xrightarrow{f \otimes 1} S \otimes_R N \xrightarrow{\phi} N \otimes_R S.\]  The coassociativity condition on the comodule is equivalent under this correspondence to the commutativity of the triangle associated to \(\phi\).
 \end{remark}
 
 \begin{remark}[{\cite[Theorem A]{HoveyMoritaThy}}]\label{StrictCechDescentRemark}
