hood's new langle/rangle drawers

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -479,7 +479,7 @@ Finally, we turn to \(Q^* \AA(F, E)\) directly, with the goal of explaining the 
 For complex-orientable \(F\) and \(E\), we have\index{formal group!homomorphism}\footnote{Hill and Hopkins have described the behavior of \(\SpH \AA(H\Z, \MU)\) on (graded) Hopf rings not in the image of \(i\)~\cite[Definition 1.22]{HillHopkins}.} \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
 \end{corollary}
 \begin{proof}
-This is a matter of calculating \(Q^* \AA(F, E)\), which is possible to do coordinate-freely (using \Cref{HopfRingComparisonMap} and \cite[Proposition 6.15]{StricklandFSFG}), but it is at least as clear to just give in and pick coordinates.  Making such a choice and using \Cref{ArithmeticInQAst}, we abbreviate \(\langle \beta_0[a_{ij}^E] \rangle\) to \(\<a_{ij}^E\>\) and \(\beta_j[1]\) to \(\beta_j\) to form \[\bigast_{i, j} \left(\left\<a_{ij}^E\right\> \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \tag{in \(Q^*\)},\] from which it follows that \[Q^* \AA(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
+This is a matter of calculating \(Q^* \AA(F, E)\), which is possible to do coordinate-freely (using \Cref{HopfRingComparisonMap} and \cite[Proposition 6.15]{StricklandFSFG}), but it is at least as clear to just give in and pick coordinates.  Making such a choice and using \Cref{ArithmeticInQAst}, we abbreviate \(\<\beta_0[a_{ij}^E]\>\) to \(\<a_{ij}^E\>\) and \(\beta_j[1]\) to \(\beta_j\) to form \[\bigast_{i, j} \left(\left\langle_{ij}^E\right\rangle \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \tag{in \(Q^*\)},\] from which it follows that \[Q^* \AA(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
 \end{proof}
 
 \begin{remark}
@@ -1208,9 +1208,9 @@ In the case where \(\mathbb G = \Gamma\) is the original height \(d\) formal gro
 \noindent Returning to the task at hand, we assume inductively that \((\OS{H(S^1[p^\infty])}{q-1})_K\) is a connected \(p\)--divisible group of height \(\binom{d}{q-1}\) and dimension \(\binom{d-1}{q-1}\).  Since the input to the bar spectral sequence is computed by formal group cohomology (\cite{LazarevDeformations}, \cite[Example 2.3.5]{HopkinsLurie}, Proof of \Cref{Symmetric2CocycleLemma}), it follows that the instance computing \(K^* \OS{H(S^1[p^\infty])}{q}\) has as its \(E_2\)--page an even-concentrated power series algebra of dimension \[\binom{d}{q-1} - \binom{d-1}{q-1} = \binom{d-1}{q}.\]  The spectral sequence therefore collapses at this page, so that \((\OS{H(S^1[p^\infty])}{q})_K\) is a formal variety of the dimension claimed.
 
 \begin{proof}[Proof of Part 2, with a gap]\renewcommand{\qedsymbol}{\relax}
-The other claims in Part 2 are formal after we check that \(\theta^q\) is an isomorphism, since the \(p\)--power--torsion structure of \[(\OS{H(S^1[p^\infty])}{q})_K\] can be read off from its Dieudonn\'e module, as can its height.  We introduce notation to analyze this statement: set \(M\) to be the Dieudonn\'e module associated to \(K_* \CP^\infty\), i.e., \[M = D(\OS{H(S^1[p^\infty])}{1}).\]  In the following diagram
+The other claims in Part 2 are formal after we check that \(\theta^q\) is an isomorphism, since the \(p\)--power--torsion structure of \[(\OS{H(S^1[p^\infty])}{q})_K\] can be read off from its Dieudonn\'e module, as can its height.  We introduce notation to analyze this statement: set \(M\) to be the Dieudonn\'e module associated to \(K_* \CP^\infty\), i.e., \(M = D(\OS{H(S^1[p^\infty])}{1})\).  In the following diagram
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1.2em]
 0 \arrow{r} & M^{\wedge q} \arrow{r} \arrow{d}{V} & \Q \otimes M^{\wedge q} \arrow{r} \arrow{d}{V} & \Q / \Z_{(p)} \otimes M^{\wedge q} \arrow{r} \arrow{d}{V} & 0 \\
 0 \arrow{r} & M^{\wedge q} \arrow{r} & \Q \otimes M^{\wedge q} \arrow{r} & \Q / \Z_{(p)} \otimes M^{\wedge q} \arrow{r} & 0
 \end{tikzcd}
