--- a/preamble.tex
+++ b/preamble.tex
@@ -187,6 +187,7 @@
 % symbol definitions
 
 \input{letter-symbols.tex}
+\input{angles}
 
 \setchars{\mathbb}{NZQRCSFPWH} % (or \setchars{\mathbb{#1}}{NZQRC} **)
 \setchars{\mathcal}{LHO}  % (or \setchars{\mathcal{#1}}{O} **)
@@ -207,8 +208,8 @@
 \renewcommand{\AA}{A\!\!A} % the right join of the leg and bar on the left letter should meet the left join of the leg and bar of the right letter
 \newcommand{\HP}{\mathit{HP}}
 
-\newcommand{\<}{\langle}
-\renewcommand{\>}{\rangle}
+\newcommand{\<}{\mylangle}
+\renewcommand{\>}{\myrangle}
 \newcommand{\sm}{\wedge}
 \newcommand{\Susp}{\Sigma}
 \newcommand{\Loops}{\Omega}
@@ -245,7 +246,7 @@
 \newcommand{\CatOf}[1]{\normalfont\textsc{#1}}
 \newcommand{\ps}[1]{\llbracket{#1}\rrbracket}
 \newcommand{\moduli}[1]{\mathcal{M}_{\mathbf{#1}}}
-\newcommand{\OS}[2]{\underline{\smash{#1}}_{#2}}
+\newcommand{\OS}[2]{\vphantom{{#1}_{#2}}\underline{\smash{#1}}_{#2}}
 \newcommand{\InternalHom}[1]{\operatorname{\underline{\smash{\CatOf{#1}}}}}
 \newcommand{\InternalAut}{\operatorname{\underline{\smash{\operatorname{Aut}}}}}
 \newcommand{\InternalEnd}{\operatorname{\underline{\smash{\operatorname{End}}}}}
