--- a/intro.tex
+++ b/intro.tex
@@ -48,7 +48,7 @@ The integer obtained by the above process is \(\int_Z \omega\). \qed
 
 \noindent Many theorems accompany this definition of \(\int_Z \omega\) for free, entailed by the general machinery of stable homotopy theory.  The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
 
-In the case of the trivial structure group \(G = e\), this construction gives the bordism theory of stably framed manifolds, and the \index{Pontryagin--Thom construction}Pontryagin--Thom theorem amounts to an equivalence \(\S \xrightarrow{\simeq} Me\).  Through this observation, these techniques gain widespread application in stable homotopy theory: for a ring spectrum \(E\), we can reconsider the unit map as a ring map \[Me \xrightarrow{\simeq} \S \to E,\] and by following the same path of ideas we learn that \(E\) is therefore equipped with a theory of integration for framed manifolds: \[\int\co \left. \left\{ \begin{array}{c}\text{stably framed \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in E^{n-m}(Z)\)} \end{array}\right\} \middle/ \sim \right. \to \pi_{-m} E.\]
+In the case of the trivial structure group \(G = e\), this construction gives the bordism theory of stably framed manifolds, and the \index{Pontryagin--Thom construction}Pontryagin--Thom theorem amounts to an equivalence \(\S \xrightarrow{\simeq} Me\).  Through this observation, these techniques gain widespread application in stable homotopy theory: for a ring spectrum \(E\), we can reconsider the unit map as a ring map \[Me \xrightarrow{\simeq} \S \to E,\] and by following the same path of ideas we learn that \(E\) is therefore equipped with a theory of integration for framed manifolds: \[\int\co \left. \left\{ \begin{array}{c}\text{stably framed \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in E^{n-m}(Z)\)} \end{array}\right\} \middle/ \sim \right. \to \pi_m E.\]
 
 Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a decreasing system of structure groups, through what stage does the unit map \(Me \to E\) factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
