unknot sentence about the discrepancy spectrum

--- a/powerops.tex
+++ b/powerops.tex
@@ -953,7 +953,7 @@ execute at end picture={
 where \(C\) is a map making the triangle it belongs to commute.  This all gives a function assigning \(A\) to \(B\) and \(A\) to \(C\) (and, in fact, the latter assignment factors through the former).
 
 In order to show nonconstructively that the set of \(A\)s is nonempty, we might try to discern that \(\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p]\) is zero by investigating the mapping set \([\spin, \gl_1 KO_p]\) itself.  We proceed by a sequence of quite improbable steps, beginning with the following Theorem original to Ando--Hopkins--Rezk:
-\begin{theorem}[{\cite[Theorem 4.11]{AHR}}]
+\begin{theorem}[{\cite[Theorem 4.11]{AHR}}]\label{DiscrepancyDefinition}
 Let \(R\) be a \(E(d)\)--local \(E_\infty\)--ring spectrum, and set \(F\) to be the fiber \[F \to \gl_1 R \to L_d \gl_1 R,\] known as the \index{discrepency spectrum}\textit{discrepency spectrum}.  Then \(\pi_* F\) is torsion and \(F\) satisfies the coconnectivity condition \(F \simeq F(-\infty, d]\). \qed
 \end{theorem}
 
