--- a/unknowns.tex
+++ b/unknowns.tex
@@ -315,13 +315,13 @@ Let us turn our attention away from the (rather burning) question of realizabili
 
 Hopkins has also highlighted the potential connections between \(\gl_1 \tmf\), number theory, and manifold geometry~\cite{HopkinsTheStringOrientation}, in analogy to the connections between \(\gl_1 kO\) (through the image of \(j\) spectrum), number theory (through Bernoulli numbers), and manifold geometry (through the Hopf invariant one problem).  One place the analysis of \(\gl_1 KO\) could be strengthened (and which would, presumably, also strengthen the analysis of \(\gl_1 \tmf\)) would be to \emph{uniquely} characterize the Bernoulli sequences appearing in \Cref{JuvitopTalkSection}.  More than one sequence satisfies those simultaneous congruences~\cite{SprangNaumann}, but the natural one appearing in the Bernoulli numbers is in some sense the ``smallest'' one.  It would be interesting to have a non-tautological encoding of this statement, in such a way that certain orientations in other contexts might also be singled out as preferable.  It would also be interesting if this could be encoded as a ``real place'' condition, which had a topological incarnation in terms of a smooth cohomology theory like differential real \(K\)--theory.
 
-An unpublished theorem of Hopkins and Lurie describes the \textit{discrepancy spectrum} over an algebraically closed field \(k\).  As in \Cref{DiscrepancyDefinition}, this specturm is defined by the fiber sequence \[F_\Gamma \to \gl_1 E_\Gamma \to L_d \gl_1 E_\Gamma.\]  The theorem states that \(F_\Gamma\) satisfies \(\Loops^\infty F_\Gamma \simeq \Loops^\infty \Susp^d I_{\Q_p/\Z_p}\), where \(I_{\Q_p/\Z_p}\) is the \(p\)--complete Brown--Comenetz dualizing spectrum, itself defined so as to satisfy the relation
+An unpublished theorem of Hopkins and Lurie describes the \(E\)--theoretic \textit{discrepancy spectrum}, defined as in \Cref{DiscrepancyDefinition} by the fiber sequence \[F_\Gamma \to \gl_1 E_\Gamma \to L_d \gl_1 E_\Gamma.\]  Over an algebraically closed field \(k\), the theorem states that \(F_\Gamma\) satisfies \[\Loops^\infty F_\Gamma \simeq \Loops^\infty (\Susp^d I_{\Q_p/\Z_p} \vee H(k^*)^{\mathrm{tors}}),\] where \((k^*)^{\mathrm{tors}}\) is the group of roots of unity of \(k\) and \(I_{\Q_p/\Z_p}\) is the \(p\)--local Brown--Comenetz dualizing spectrum, itself defined so as to satisfy the relation
 \begin{align*}
 \pi_0 F(E, I_{\Q_p/\Z_p}) & = \CatOf{AbelianGroups}(\pi_0 E, \Q_p/\Z_p).
 \end{align*}
 By setting \(E = \S\), it follows that the homotopy groups of \(I_{\Q_p/\Z_p}\) mostly match those of \(\S\) itself (or, rather, their Pontryagin duals), so computing them is equivalent to computing the homotopy groups of spheres.  The Hopkins--Lurie theorem gives an interesting approach to performing this computation: the chromatic fracture square for \(L_d \gl_1 E_\Gamma\) couples to the logarithm to rewrite this square in terms of \(\widehat L_j\)--localizations of \(E_\Gamma\), intertwined by very complicated power operation formulas.  It would be an extremely interesting exercise to see this play out even at low heights.
 
-Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology (or, more broadly, algebraic geometry) completely internally to the algebric geometry of \(E_\infty\)--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The \(\sigma\)--orientation arises essentially from considering the objects associated to \(BU(n)\) and \(BO(n)\) using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}\footnote{A curious feature of the current understanding of spectral algebraic geometry is its ongoing assumption that the ring spectra involved are \emph{connective}.  There are some results in the nonconnective (and specifically $2$--periodic) direction, but we are a long ways from giving truly satisfactory structural descriptions of the phenomena observed there.  In this setting, chromatic homotopy theory is meant to be give guiding principles: its theorems, classical and not yet proven, are meant to shed light on the behavior of the nonconnective spectral algebraic geometry of the sphere spectrum.}  Any serious student of elliptic cohomology should also become familiar with this framework.  It has one feature that is especially curious and worth emphasizing here: the study of power operations is incidental to the Lurie-style approach of working with \(E_\infty\) ring spectra, but his framework uses in a critical way the geometry of \(p\)--divisible groups.  It must therefore be the case that the structure of a \(p\)--divisible group---and, more presumptuously and more specifically, its subgroup lattice as in \Cref{PowerOpnsSection}---must entirely encode its theory of power operations.  It is very much worthwhile to understand this connection in more generality than just in the setting of Morava \(E\)--theory.
+Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology (or, more broadly, algebraic geometry) completely internally to the algebric geometry of \(E_\infty\)--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The \(\sigma\)--orientation arises essentially from considering the objects associated to \(BU(n)\) and \(BO(n)\) using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}\footnote{A curious feature of the current understanding of spectral algebraic geometry is its ongoing assumption that the ring spectra involved are \emph{connective}.  There are some results in the nonconnective (and specifically $2$--periodic) direction, but we are a long ways from giving truly satisfactory structural descriptions of the phenomena observed there.  In this setting, chromatic homotopy theory is meant to be give guiding principles: its theorems are meant to shed light on the behavior of the nonconnective spectral algebraic geometry of the sphere spectrum.}  Any serious student of elliptic cohomology should also become familiar with this framework.  It has one feature that is especially curious and worth emphasizing here: the study of power operations is incidental to the Lurie-style approach of working with \(E_\infty\) ring spectra, but his framework uses in a critical way the geometry of \(p\)--divisible groups.  It must therefore be the case that the structure of a \(p\)--divisible group---and, more presumptuously and more specifically, its subgroup lattice as in \Cref{PowerOpnsSection}---must entirely encode its theory of power operations.  It is very much worthwhile to understand this connection in more generality than just in the setting of Morava \(E\)--theory.
 
 
 
